# meta-charter

./: .env  .gitignore  ABOUT.md  README.md  alembic.ini  check-list.md  pyproject.toml
app/: main.py  worker.py
app/api/: deps.py
app/api/auth/: repository.py  router.py  schemas.py  service.py
app/api/blacklist/: repository.py  router.py  schemas.py  service.py
app/api/offers/: external_client.py  mapper.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  logger.py  response.py
app/db/: session.py
app/models/: black_list.py  offers.py  users.py
charter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
migration/: env.py
migration/versions/: 165c9fab873a_initial_migration.py  2b2e26e7e3d5_init.py  7d3a2e7f1c11_add_blacklist_table.py  9a1f0e2d4b77_add_gts_credentials_to_users.py
postman/: MetaCharter.postman_collection.json
